# idfkit-mcp

./: .dockerignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  idfkit-board-of-directors.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.json  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: deploy-docs.yml  deploy-pr-docs.yml  main.yml  on-release-main.yml
api/server/: index.html
api/state/: index.html
api/tools-read/: index.html
api/tools-schema/: index.html
api/tools-simulation/: index.html
api/tools-validation/: index.html
api/tools-weather/: index.html
concepts/error-semantics/: index.html
docs/: 404.html  index.html  index.md  modules.md  search.json
docs/api/: index.md  server.md  state.md  tools-read.md  tools-schema.md  tools-simulation.md  tools-validation.md  tools-weather.md  tools-write.md
docs/api/tools-simulation/: index.html
docs/api/tools-validation/: index.html
docs/api/tools-write/: index.html
docs/concepts/: error-semantics.md  server-state.md
docs/concepts/error-semantics/: index.html
docs/getting-started/: client-setup.md  first-session.md  installation.md
docs/stylesheets/: extra.css
docs/tools/: index.md  model-read.md  model-write.md  schema.md  simulation.md  validation.md  weather.md
docs/tools/model-read/: index.html
docs/troubleshooting/: setup.md  simulation.md
docs/workflows/: claude.md  codex.md  multi-agent-patterns.md
getting-started/client-setup/: index.html
getting-started/first-session/: index.html
getting-started/installation/: index.html
gh-pages-extra/: CNAME
idfkit-board/board-members/: 01-renata-vasquez.md  02-james-okafor.md  03-maya-chen.md  04-amir-khalil.md  05-lucia-ferretti.md  06-adaeze-nwosu.md
idfkit-board/company/: idfkit-overview.md
idfkit-board/projects/: 01-idfkit-core.md  02-envelop.md  03-idfkit-mcp.md  04-idfkit-lsp.md  05-idfkit-com.md
pr-preview/pr-2/: index.html  objects.inv  search.json  sitemap.xml
pr-preview/pr-3/: sitemap.xml
src/idfkit_mcp/: __init__.py  errors.py  serializers.py  server.py  state.py
tests/: conftest.py  test_foo.py  test_integration.py  test_read_tools.py  test_schema_tools.py  test_server.py  test_simulation_tools.py  test_validation_tools.py  test_weather_tools.py  test_write_tools.py
tools/: index.html
tools/simulation/: index.html
tools/weather/: index.html
troubleshooting/simulation/: index.html
workflows/multi-agent-patterns/: index.html
(+44 files in other folders)
