[project]
name = "idfkit-mcp"
version = "0.0.1"
description = "An MCP server exposing EnergyPlus model authoring, validation, and simulation via idfkit"
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuelduchesne@me.com" }]
readme = "README.md"
keywords = ["energyplus", "mcp", "idfkit", "building-energy"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "idfkit>=0.3.0",
    "mcp>=1.2.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
idfkit-mcp = "idfkit_mcp.server:main"

[project.urls]
Homepage = "https://mcp.idfkit.com/docs/"
Repository = "https://github.com/idfkit/idfkit-mcp"
Documentation = "https://mcp.idfkit.com/docs/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "pyright>=1.1.389",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "zensical>=0.0.11",
    "mkdocstrings-python>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idfkit_mcp"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
# Functions decorated with @mcp.tool() inside register() appear unused
reportUnusedFunction = "warning"
# Tests access private tool internals for testing
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S104"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
